# aadhaar-py

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build_and_publish.yml  checks.yml  checks_and_tests.yml  code_coverage.yml
aadhaar/: exceptions.py  offline_xml.py  qr.py  secure_qr.py  tests.py  utils.py
aadhaar/secure_qr/: __init__.py  enums.py  exceptions.py  extractor.py  utilities.py
src/: exceptions.py  extract.py  utils.py
test_data/: aadhaar_image.pickle  secure_qr_data.txt  secure_qr_sample_bytes_data.pickle  secure_qr_sample_bytes_data.txt  to_dict.json
tests/: test_utils.py
tests/integration/: test_secure_qr.py
tests/unit/: test_secure_qr.py
