[metadata]
name = aadhaar-py
version = 1.0.0
author = Vishal Tanwar
author_email = vishal.tanwar@outlook.com
description = An Aadhaar Secure QR and OfflineXML decoding library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/vishaltanwar96/aadhaar-py
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
keywords = aadhaar, offline xml, secure qr, decoder

[options]
python_requires = >=3.8
packages = aadhaar
install_requires =
    Pillow
    xmltodict
